# workday

./: .gitignore  README.md  TODO.md  meson.build
data/: com.github.jedihe.workday.appdata.xml.in  com.github.jedihe.workday.desktop.in  com.github.jedihe.workday.gresource.xml  com.github.jedihe.workday.gschema.xml
debian/: control  copyright  rules
po/: com.github.jedihe.workday.pot  es.po  fr.po  nl.po  pt.po  pt_BR.po  ro.po  ru.po
po/extra/: POTFILES  extra.pot  fr.po  nl.po  pt.po  pt_BR.po  ro.po
src/: Application.vala  ScreenrecorderWindow.vala  meson.build
src/Dialogs/: Countdown.vala  SaveDialog.vala
src/Tools/: Recorder.vala  SendNotification.vala  SessionRecorder.vala
src/Views/: RecordView.vala  SettingsView.vala
src/Widgets/: MonitorLabelWindow.vala  VideoPlayer.vala
